# Artemis

./: .clang-format  .clang-tidy  .gitignore  .qmllint.ini  AGENTS.md  CMakeLists.txt  PKGBUILD  README.md  artemis-git-2d3a47f-1-x86_64.pkg.tar.zst
.github/workflows/: build.yml
artemis-git/: config  packed-refs
artemis-git/objects/pack/: pack-cd92e3fc77906b02cc5c8e5017360711b5cd30cd.idx  pack-cd92e3fc77906b02cc5c8e5017360711b5cd30cd.pack  pack-cd92e3fc77906b02cc5c8e5017360711b5cd30cd.rev
docs/: architecture.md  codex-protocol.md  development.md
pkg/artemis-git/: .BUILDINFO  .MTREE  .PKGINFO
qml/: Main.qml
qml/components/: ConversationDelegate.qml  DiffView.qml  McpServerRow.qml  MessageStrip.qml  ReviewPane.qml  SectionFrame.qml  ThreadPane.qml
qml/dialogs/: CommitDialog.qml  FullAccessDialog.qml  ImageViewerDialog.qml  SettingsDialog.qml
qml/pages/: DiagnosticsPage.qml
qml/utils/: AppHelpers.js
resources/: artemis.notifyrc  org.artemis.Artemis.desktop
src/: main.cpp
src/app/: AppController.cpp  AppController.h
src/domain/: AgentProvider.h
src/git/: GitService.cpp  GitService.h
src/models/: ConversationModel.cpp  ConversationModel.h  ProjectTreeModel.cpp  ProjectTreeModel.h
src/persistence/: Database.cpp  Database.h
src/platform/: DesktopIntegration.cpp  DesktopIntegration.h  Paths.cpp  Paths.h
src/providers/: ProviderFactory.cpp  ProviderFactory.h
src/providers/codex/: CodexClient.cpp  CodexClient.h
tests/: CMakeLists.txt
tests/unit/: TestCore.cpp
